Avance 1 de js, botones funcionales. Algo le pasó al texto en el css T_T

--- a/index.html
+++ b/index.html
@@ -20,30 +20,38 @@
   </header>
   <section id="photos">
     <div class="panda-pic">
-      <img src="assets/img/panda-1.jpg" alt="baby-panda">
-      <span class="close" id="close">&times;</span>
+      <img src="assets/img/panda-1.jpg" id="panda1" alt="baby-panda">
+      <span class="close" id="close1">&times;</span>
     </div>
     <div class="panda-pic">
-      <img src="assets/img/panda-2.jpg" alt="panda-close-up">
-      <span class="close" id="close">&times;</span>
+      <img src="assets/img/panda-2.jpg" id="panda2" alt="panda-close-up">
+      <span class="close" id="close2">&times;</span>
     </div>
     <div class="panda-pic">
-      <img src="assets/img/panda-3.jpg" alt="panda-eating">
-      <span class="close" id="close">&times;</span>
+      <img src="assets/img/panda-3.jpg" id="panda3" alt="panda-eating">
+      <span class="close" id="close3">&times;</span>
     </div>
     <div class="panda-pic">
-      <img src="assets/img/panda-4.jpg" alt="panda-yawn">
-      <span class="close" id="close">&times;</span>
+      <img src="assets/img/panda-4.jpg" id="panda4" alt="panda-yawn">
+      <span class="close" id="close4">&times;</span>
     </div>
   </section>
   <section id="info">
     <div class="btns">
-      <button>Origin</button>
-      <button>History</button>
-      <button>Restore photos</button>
+      <button type="button" id="btn-origin">Origin</button>
+      <button type="button" id="btn-history">History</button>
+      <button type="button" id="btn-restore">Restore photos</button>
     </div>
-    <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
-    <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+    <div class="articles">
+      <div id="art-origin">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex sint laudantium sed rerum velit perspiciatis laboriosam veniam iste? Voluptatum optio pariatur harum distinctio recusandae. Deleniti reprehenderit reiciendis eligendi nihil, eius.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quae culpa quidem expedita odit quisquam qui, eos necessitatibus magnam atque, consequatur ad blanditiis praesentium, possimus illo neque vitae consectetur totam.</p>
+      </div>
+      <div id="art-history">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia molestias eligendi maiores eius repudiandae sunt facilis aperiam! Ullam laboriosam, maiores quo enim sequi est cum consectetur, at optio molestiae vitae?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At non autem fugiat rerum expedita mollitia ipsa nisi, deleniti consectetur voluptates, libero ipsam vel velit optio reiciendis! Sunt nisi, maiores ipsum!</p>
+      </div>
+    </div>
   </section>
   <script src="assets/js/app.js"></script>
 </body>
