Como que se arreglo un poco el texto, aún  no sé qué pasó

--- a/index.html
+++ b/index.html
@@ -42,16 +42,12 @@
       <button type="button" id="btn-history">History</button>
       <button type="button" id="btn-restore">Restore photos</button>
     </div>
-    <div class="articles">
-      <div id="art-origin">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex sint laudantium sed rerum velit perspiciatis laboriosam veniam iste? Voluptatum optio pariatur harum distinctio recusandae. Deleniti reprehenderit reiciendis eligendi nihil, eius.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quae culpa quidem expedita odit quisquam qui, eos necessitatibus magnam atque, consequatur ad blanditiis praesentium, possimus illo neque vitae consectetur totam.</p>
-      </div>
-      <div id="art-history">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia molestias eligendi maiores eius repudiandae sunt facilis aperiam! Ullam laboriosam, maiores quo enim sequi est cum consectetur, at optio molestiae vitae?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At non autem fugiat rerum expedita mollitia ipsa nisi, deleniti consectetur voluptates, libero ipsam vel velit optio reiciendis! Sunt nisi, maiores ipsum!</p>
-      </div>
-    </div>
+      <article id="art-origin">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex sint laudantium sed rerum velit perspiciatis laboriosam veniam iste? Voluptatum optio pariatur harum distinctio recusandae. Deleniti reprehenderit reiciendis eligendi nihil, eius.   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </article>
+      <article id="art-history">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia molestias eligendi maiores eius repudiandae sunt facilis aperiam! Ullam laboriosam, maiores quo enim sequi est cum consectetur, at optio molestiae vitae?  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </article>
   </section>
   <script src="assets/js/app.js"></script>
 </body>
