Se arregla el align de las fotos. Trabajando en el texto nuevamente

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
   </header>
   <section id="photos">
     <div class="panda-pic">
-      <img src="assets/img/panda-1.jpg" id="panda1" alt="baby-panda">
+      <img src="assets/img/panda-1.jpg" id="panda1" alt="baby-panda" title="Baby Panda">
       <span class="close" id="close1">&times;</span>
     </div>
     <div class="panda-pic">
-      <img src="assets/img/panda-2.jpg" id="panda2" alt="panda-close-up">
+      <img src="assets/img/panda-2.jpg" id="panda2" alt="panda-close-up" title="Panda close up">
       <span class="close" id="close2">&times;</span>
     </div>
     <div class="panda-pic">
-      <img src="assets/img/panda-3.jpg" id="panda3" alt="panda-eating">
+      <img src="assets/img/panda-3.jpg" id="panda3" alt="panda-eating" title="Panda eating">
       <span class="close" id="close3">&times;</span>
     </div>
     <div class="panda-pic">
-      <img src="assets/img/panda-4.jpg" id="panda4" alt="panda-yawn">
+      <img src="assets/img/panda-4.jpg" id="panda4" alt="panda-yawn" title="Panda yawning">
       <span class="close" id="close4">&times;</span>
     </div>
   </section>
