Texto arreglado. Estilo del menú mejorado para que sea igual al ejemplo. Trabajando en el README

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <header id="menu">
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Pandas</li>
-        <li>History</li>
-        <li>Extintion</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Pandas</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Extintion</a></li>
       </ul>
     </nav>
   </header>
@@ -42,11 +42,9 @@
       <button type="button" id="btn-history">History</button>
       <button type="button" id="btn-restore">Restore photos</button>
     </div>
-      <article id="art-origin">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex sint laudantium sed rerum velit perspiciatis laboriosam veniam iste? Voluptatum optio pariatur harum distinctio recusandae. Deleniti reprehenderit reiciendis eligendi nihil, eius.   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <article id="art-origin"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </article>
-      <article id="art-history">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia molestias eligendi maiores eius repudiandae sunt facilis aperiam! Ullam laboriosam, maiores quo enim sequi est cum consectetur, at optio molestiae vitae?  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <article id="art-history"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </article>
   </section>
   <script src="assets/js/app.js"></script>
